# banzai

./: .dockerignore  .envrc  .gitignore  .local-banzai-env.default  .rtd-environment.yml  .site-banzai-env.default  .travis.yml  CHANGES.md  DEVELOPMENT_K8s.md  Dockerfile  Jenkinsfile  MANIFEST.in  README-localbanzai.md  README-sitebanzai.md  README.rst  ah_bootstrap.py  alembic.ini  bootstrap.md  build.py  develop.sh  docker-compose-dependencies.yml  docker-compose-local.yml  docker-compose-site.yml  docker-compose.local.yml  docker-compose.yml  environment.yaml  flake.nix  flake.nix.backup  kind-cluster.yaml  local-banzai-env.default  pyproject.toml  pytest.ini  queue_images.py  readthedocs.yml  setup.cfg  setup.py  site-banzai-env.default  skaffold.yaml  tox.ini
.github/workflows/: build-docker.yml  build.yml  codestyle.yaml  coverage.yaml  docker_image.yml  docs.yaml  e2e-skaffold.yaml  e2e.yaml  test.yml  unit-tests.yml
alembic/: alembic.ini  db_migration.py
alembic/migrations/: env.py
alembic/migrations/versions/: 51b98e26cc50_migration_of_past_data_for_blockid_.py  8e35c490a971_add_calibrations_block_info_proposal_id_.py
alembic/versions/: 5b5b96094c33_migrate_instrument_uniqueness.py
banzai/: __init__.py  _astropy_init.py  alembic.ini  astrometry.py  background.py  bias.py  bpm.py  calibrations.py  celery.py  celeryconfig.py  conftest.py  context.py  cosmic.py  crosstalk.py  dark.py  data.py  dbs.py  encoder.py  exceptions.py  flats.py  frames.py  gain.py  headers.py  images.py  lco.py  listeners.py  logs.py  main.py  metrics.py  mosaic.py  munge.py  photometry.py  pointing.py  preview.py  qc.py  query.py  readnoise.py  readnoisemap.py  realtime.py  scheduling.py  (+10 more)
banzai/alembic/: README  env.py
banzai/alembic/versions/: 5b5b96094c33_migrate_instrument_uniqueness.py
banzai/api/: app.py  calibration_images.py  db.py  instruments.py  processed_images.py  schema.py  sites.py
banzai/cache/: __init__.py  download_worker.py  init.py  init_cache.py  replication.py  sync.py  sync_daemon.py
banzai/celerytaskpool/: __init__.py
banzai/image/: header.py  image.py
banzai/qc/: __init__.py  header_checker.py  pattern_noise.py  pointing.py  qc_stage.py  saturation.py  sinistro_1000s.py  utils.py  zeros.py
banzai/tests/: __init__.py  bias_utils.py  dark_utils.py  e2e-k8s.yaml  flat_utils.py  full_pipeline_test.py  qc_stage_integration_tests.py  setup_package.py  test_array_utils.py  test_astrometry.py  test_background.py  test_bias_comparer.py  test_bias_level_subtractor.py  test_bias_maker.py  test_bias_subtractor.py  test_bpm.py  test_cache_init.py  test_calibration_stacker.py  test_celery.py  test_cosmic.py  test_crosstalk_corrector.py  test_dark_comparer.py  test_dark_maker.py  test_dark_normalizer.py  test_dark_subtractor.py  test_date_utils.py  test_dbs.py  test_download_worker.py  test_end_to_end.py  test_file_utils.py  test_find_missing_frames.py  test_fits_utils.py  test_flat_comparer.py  test_flat_divider.py  test_flat_maker.py  test_flat_normalizer.py  test_flat_snr.py  test_frames.py  test_gain_normalizer.py  test_header_checker.py  (+33 more)
banzai/tests/data/: configdb_example.json  cpt1m012-fa06-20200113-0102-matched-cat.fits  ogg2m001-ep04-20201006-0097-matched-cat.fits  test_lake_response_cpt_20190609.json  test_lake_response_cpt_20190609.json.json  test_lake_response_cpt_20190610.json  test_lake_response_cpt_20190610.json.json  test_lake_response_lsc_20190402.json  test_lake_response_lsc_20190402.json.json  test_lake_response_ogg_20180630.json  test_lake_response_ogg_20180630.json.json  test_lake_response_ogg_20180702.json  test_lake_response_ogg_20180702.json.json  test_lake_response_ogg_20180703.json  test_lake_response_ogg_20180703.json.json  test_lake_response_ogg_20180708.json  test_lake_response_ogg_20180708.json.json  test_obs_portal_null.json  test_obs_portal_response_cpt_20190609.json  (+5 more)
banzai/utils/: README_METRICS.md  __init__.py  array_utils.py  date_utils.py  db_migration.py  db_migrations.py  file_utils.py  fits_utils.py  image_utils.py  import_utils.py  instrument_utils.py  lake_utils.py  median_utils.pyx  messaging.py  metrics.py  observation_utils.py  photometry_utils.py  qc.py  realtime_utils.py  setup_package.py  stage_utils.py  stats.py
banzai_bot/: app.py  env_var.sh  forms.py  reprocess_dayobs.html  requirements.txt  setup.py  utils.py
banzai_bot/templates/: base.html  index.html  reprocess_dayobs.html
banzai_bot/test/: test_utils.py
banzai_tools/: Dockerfile  app.py  requirements.txt  settings.py  setup.py  utils.py
banzai_tools/templates/: base.html  index.html  reprocess_dayobs.html
docs/: Makefile  conf.py  example_reduction.ipynb  index.rst  make.bat  manual_reduction.ipynb  overview.rst  smartstacking_architecture.md
docs/banzai/: index.rst
docs/pylcogt/: index.rst
helm-chart/banzai/: Chart.yaml  README.md  requirements.yaml  values-dev.yaml  values-prod.yaml  values.yaml
k8s/base/: README.md  kustomization.yaml
licenses/: LICENSE.rst
notebooks/: reduction.ipynb
pylcogt/: __init__.py  astrometry.py  bias.py  catalog.py  crosstalk.py  dark.py  dateutils.py  dbs.py  flats.py  gain.py  headers.py  images.py  ingest.py  lcogtsteps.py  logs.py  main.py  mosaic.py  munge.py  photometry.py  pylcogtmain.py  stages.py  trim.py
pylcogt/tests/: __init__.py  full_pipeline_test.py  test_bias_maker.py  test_bias_subtractor.py  test_full_pipeline.py  test_logging.py  test_median_utils.py  test_overscan_subtactor.py  test_quick_select.py  test_stats.py  utils.py
pylcogt/utils/: __init__.py  _median_utils.c  _median_utils.h  array_utils.py  date_utils.py  file_utils.py  fits_utils.py  fitting.py  images.py  imutils.c  imutils.h  lcogtsteps.py  median_cutils.c  median_cutils.h  median_utils.c  median_utils.h  median_utils.pyx  medutils.pyx  pymysql.py  quick_select.c  quick_select.h  setup_package.py  stats.py  stats.pyx
scripts/: queue_images.py  queue_subframes.py
sql/: triggers.sql
testing/: comparecagtalogs.py  runtestdata  runtestdata_sbig  runtestdata_sinistro  runtestdata_spectral
(+52 files in other folders)
