[build-system]
requires = ["setuptools>=61", "cython", "extension-helpers", "numpy>=2"]
build-backend = "setuptools.build_meta"


[project]
name = "lco-banzai"
requires-python = ">=3.11,<4"
version = "1.35.0"
description = "Python data reduction package for LCOGT data"

authors = [
  { name="Curtis McCully", email="cmccully@lco.global" },
]
license = {text="GPL-3.0-or-later"}
readme = "README.rst"
keywords = ["astronomy", "reduction", "LCOGT"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
  "astropy @ git+https://github.com/cmccully/astropy.git@fix/funpack",
  "scipy",
  "sqlalchemy>=2",
  "logutils",
  "numpy>=2",
  "lcogt_logging",
  "photutils",
  "bottleneck",
  "requests",
  "opensearch-py",
  "pytest>=4.0",
  "pyyaml",
  "psycopg[binary]",
  "celery[redis]>=5.5.0rc5",
  "apscheduler",
  "ocs_ingester>=3.0.4,<4.0.0",
  "tenacity>=8.5",
  "python-dateutil",
  "emcee",
  "scikit-image",
  "mock",
  "extension-helpers",
  "numcodecs>=0.16.0",
  "cosmic-conn[cpu]>=0.6.1",
  "torch>=2.3",
  "alembic"
]

[project.optional-dependencies]
test = [
    "pytest>=4.0",
    "coverage",
    "pytest-astropy"
]
docs = [
    "sphinx-astropy",
    "sphinx_rtd_theme",
    "sphinx-pyproject",
    "sphinx-autobuild",
    "nbsphinx",
    "ipykernel",
]
style = ["pycodestyle"]

[dependency-groups]
otel = [
    "opentelemetry-distro>=0.55b1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.34.1",
    "opentelemetry-instrumentation-celery>=0.55b1",
]

[project.urls]
"Source" = "https://github.com/lcogt/banzai"
"Docs" = "https://banzai.readthedocs.io/en/latest/"

[tool.uv]
override-dependencies = [
    "astropy @ git+https://github.com/cmccully/astropy.git@fix/funpack"
]

[tool.uv.sources]
cosmic-conn = { git = "https://github.com/cy-xu/cosmic-conn", branch = "v0.6.1" }
ocs_ingester = { git = "https://github.com/observatorycontrolsystem/ingester", branch = "fix/poetry_and_update_deps" }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
include = ["banzai*"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"banzai.tests" = ["data/*"]
"banzai" = ["alembic.ini", "alembic/env.py", "alembic/script.py.mako", "alembic/versions/*.py"]

[project.scripts]
banzai_reduce_individual_frame = "banzai.main:reduce_single_frame"
banzai_reduce_directory = "banzai.main:reduce_directory"
banzai_make_master_calibrations = "banzai.main:make_master_calibrations"
banzai_automate_stack_calibrations = "banzai.main:start_stacking_scheduler"
banzai_run_realtime_pipeline = "banzai.main:run_realtime_pipeline"
banzai_mark_frame_as_good = "banzai.main:mark_frame_as_good"
banzai_mark_frame_as_bad = "banzai.main:mark_frame_as_bad"
banzai_update_db = "banzai.main:update_db"
banzai_add_instrument = "banzai.main:add_instrument"
banzai_add_site = "banzai.main:add_site"
banzai_add_super_calibration = "banzai.main:add_super_calibration"
banzai_populate_bpms = "banzai.main:add_bpms_from_archive"
banzai_create_db = "banzai.main:create_db"
banzai_create_local_db = "banzai.main:create_local_db"
banzai_download_worker = "banzai.cache.download_worker:run_download_worker_daemon"
banzai_cache_init = "banzai.cache.init:run_initialization"

[tool.coverage.run]
source = ["banzai"]
omit = [
  "banzai/_astropy_init*",
  "banzai/conftest*",
  "banzai/cython_version*",
  "banzai/setup_package*",
  "banzai/*/setup_package*",
  "banzai/*/*/setup_package*",
  "banzai/tests/*",
  "banzai/*/tests/*",
  "banzai/*/*/tests/*",
  "banzai/version*"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "except ImportError",
  "raise AssertionError",
  "raise NotImplementedError",
  "def main\\(.*\\):",
  "pragma: py{ignore_python_version}"
]
