[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.5
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
log_cli = True
log_level = info
log_cli_level = info

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
# TODO: This no longer works with pypi because on pypi we are lco-banzai.
name = banzai
description = Python data reduction package for LCOGT data
long_description = This is a package to reduce LCOGT raw imaging data.
author = Curtis McCully
author_email = cmccully@lco.global
license = GPLv3
url = http://github.com/lcogt/banzai

edit_on_github = True
github_project = lcogt/banzai

# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.27.6

[options]
setup_requires =
    cython
    numpy==1.17.4
install_requires =
    astropy>=3.0
    scipy
    sqlalchemy>=1.3.0b1
    logutils
    numpy==1.17.4
    cython
    mysql-connector-python
    lcogt_logging==0.3.2
    sep
    kombu==4.4.0
    amqp==2.4.2
    requests
    elasticsearch>=5.0.0,<6.0.0
    pytest>=4.0
    pyyaml
    psycopg2-binary
    celery[redis]==4.3.0
    apscheduler
    python-dateutil
    lco_ingester>=2.1.7
tests_require =
    pytest>=4.0
    mock
    coverage
    pytest-astropy

[options.entry_points]
console_scripts =
    banzai_reduce_individual_frame = banzai.main:reduce_single_frame
    banzai_reduce_directory = banzai.main:reduce_directory
    banzai_stack_calibrations = banzai.main:stack_calibrations
    banzai_automate_stack_calibrations = banzai.main:start_stacking_scheduler
    banzai_run_realtime_pipeline = banzai.main:run_realtime_pipeline
    banzai_mark_frame_as_good = banzai.main:mark_frame_as_good
    banzai_mark_frame_as_bad = banzai.main:mark_frame_as_bad
    banzai_update_db = banzai.main:update_db
    banzai_run_end_to_end_tests = banzai.tests.test_end_to_end:run_end_to_end_tests
    banzai_migrate_db = banzai.utils.db_migration:migrate_db
    banzai_add_instrument = banzai.main:add_instrument
