[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
# TODO: This no longer works with pypi because on pypi we are lco-banzai.
name = banzai
description = Python data reduction package for LCOGT data
long_description = This is a package to reduce LCOGT raw imaging data.
author = Curtis McCully
author_email = cmccully@lco.global
license = GPLv3
url = http://github.com/lcogt/banzai

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[coverage:run]
source = {packagename}
omit =
   {packagename}/_astropy_init*
   {packagename}/conftest*
   {packagename}/cython_version*
   {packagename}/setup_package*
   {packagename}/*/setup_package*
   {packagename}/*/*/setup_package*
   {packagename}/tests/*
   {packagename}/*/tests/*
   {packagename}/*/*/tests/*
   {packagename}/version*

[coverage:report]
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover

   # Don't complain about packages we have installed
   except ImportError

   # Don't complain if tests don't hit assertions
   raise AssertionError
   raise NotImplementedError

   # Don't complain about script hooks
   def main\(.*\):

   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
